welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if (temp2<=0) {
    ^